[package]
name = "ferrit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full"] }
wgpu = "0.16.0"
winit = "0.28.6"
